# AplikasiPembelajaranASD

./: .env.example  .gitignore  DEPLOYMENT.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  asd_learning.db  pyproject.toml  test_api.db  test_api_features.db
backend/aplikasi_pembelajaran_asd_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: catalog.py  config.py  db.py  learning.py  llm.py  main.py  models.py  schemas.py  security.py  topic_content.py
backend/app/api/: routes.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.js
frontend/app/daftar/: page.js
frontend/app/dashboard/: page.js
frontend/app/insights/: page.js
frontend/app/login/: page.js
frontend/app/lupa-kata-sandi/: page.js
frontend/app/progress/: page.js
frontend/app/rekomendasi/: page.js
frontend/app/reset-kata-sandi/: page.js
frontend/app/topik/: page.js
frontend/app/topik/[slug]/: page.js
frontend/components/app/: app-shell.jsx  page-state.jsx  topic-visuals.jsx
frontend/components/auth/: auth-page.jsx  password-reset-page.jsx
frontend/lib/: api.js  auth.js  learning-data.js
