[project]
name = "aplikasi-pembelajaran-asd-backend"
version = "0.1.0"
description = "FastAPI backend for Aplikasi Pembelajaran ASD."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.4.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
